--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node Backend/server.js",
     "server": "nodemon Backend/server.js",
     "client": "npm start --prefix frontend",
-    "dev":"concurrently \"npm run server\" \"npm run client\""
+    "dev":"concurrently \"npm run server\" \"npm run client\"",
+    "build": "react-scripts build"
   },
   "author": "Kathir Karthik M",
   "license": "MIT",
