--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "node Backend/server.js",
     "server": "nodemon Backend/server.js",
     "client": "npm start --prefix frontend",
-    "dev":"concurrently \"npm run server\" \"npm run client\"",
-    "build": "react-scripts build"
+    "dev":"concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Kathir Karthik M",
   "license": "MIT",
