--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "server": "nodemon Backend/server.js",
     "client": "npm start --prefix frontend",
     "dev":"concurrently \"npm run server\" \"npm run client\"",
-    "build": "react-scripts build"
+    "build": "react-scripts build --prefix frontend"
   },
   "author": "Kathir Karthik M",
   "license": "MIT",
