add : production config

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node Backend/server.js",
     "server": "nodemon Backend/server.js",
     "client": "npm start --prefix frontend",
-    "dev":"concurrently \"npm run server\" \"npm run client\"",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "build": "react-scripts build --prefix frontend"
   },
   "author": "Kathir Karthik M",
@@ -15,6 +15,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.0",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
